examples/test/testpolicy16120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16120
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key7: value39
      key25: value25
      key21: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value5
          key16: value33
      podSelector:
        matchLabels:
          key14: value15
          key4: value21
          key36: value25
